Put all tokens in the same div
* Take out the column choice div
* Put column choice tokens inside the token container. That way, will be able to animate the tokens falling down and all the tokens are the same container

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ hr {
     touch-action: none;
     border-radius: 6px;
     box-sizing: border-box;
+    margin-top: 100px;
 }
 
 .grid-container {
@@ -130,43 +131,32 @@ hr {
     z-index: 2;
 }
 
-.column-choice {
-    display: flex;
-    width: 360px;
-    height: 70px;
-    position: relative;
-    cursor: pointer;
-    touch-action: none;
-    border-radius: 6px;
-    box-sizing: border-box;
+.token.column-choice.column-1 {
+    transform: translate(0, -70px);
 }
 
-.column-choice .token.column-1 {
-    transform: translate(0, 0);
+.token.column-choice.column-2 {
+    transform: translate(50px, -70px);
 }
 
-.column-choice .token.column-2 {
-    transform: translate(50px, 0);
+.token.column-choice.column-3 {
+    transform: translate(100px, -70px);
 }
 
-.column-choice .token.column-3 {
-    transform: translate(100px, 0);
+.token.column-choice.column-4 {
+    transform: translate(150px, -70px);
 }
 
-.column-choice .token.column-4 {
-    transform: translate(150px, 0);
+.token.column-choice.column-5 {
+    transform: translate(200px, -70px);
 }
 
-.column-choice .token.column-5 {
-    transform: translate(200px, 0);
+.token.column-choice.column-6 {
+    transform: translate(250px, -70px);
 }
 
-.column-choice .token.column-6 {
-    transform: translate(250px, 0);
-}
-
-.column-choice .token.column-7 {
-    transform: translate(300px, 0);
+.token.column-choice.column-7 {
+    transform: translate(300px, -70px);
 }
 
 .token {
