--- a/assets/css/game2.css
+++ b/assets/css/game2.css
@@ -162,6 +162,8 @@ body {
 }
 
 .game-container {
+    display: flex;
+    justify-content: center;
     width: 40%;
     height: 100%;
 }
@@ -170,8 +172,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 65%;
+    width: 720px;
+    height: 620px;
     margin-bottom: 10%;
 }
 
